<resources>
    <string name="font_sans_serif">sans-serif</string>
    <string name="font_sans_serif_light">sans-serif-light</string>
    <string name="font_sans_serif_condensed">sans-serif-condensed</string>
    <string name="font_sans_serif_thin">sans-serif-thin</string>
    <string name="font_sans_serif_medium">sans-serif-medium</string>
    <string name="online">Онлайн</string>
    <string name="offline">Оффлайн</string>
    <string name="drawer_search">Поиск</string>
    <string name="drawer_new">Новинки</string>
    <string name="drawer_top">Топ Авторов</string>
    <string name="drawer_favorite">Избранное</string>
    <string name="drawer_review">Обзоры</string>
    <string name="drawer_discuss">Обсуждения</string>
    <string name="drawer_sign_up">Регистрация</string>
    <string name="drawer_history">История</string>
    <string name="drawer_external_works">Сохранённые</string>
    <string name="drawer_observable">Подписки</string>
    <string name="drawer_settings">Настройки</string>
    <string name="drawer_open_file">Открыть книгу</string>
    <string name="drawer_help">Помощь</string>
    <string name="refresh">Обновить</string>
    <string name="action_settings">Опции</string>
    <string name="app_name">Самлиб</string>
    <string name="loading">Загрузка…</string>
    <string name="error">Произошла ошибка!</string>
    <string name="error_network">Проврьте соединение с\nинтернетом…</string>
    <string-array name="author_grid">
        <item>WWW:</item>
        <item>Aдpeс:</item>
        <item>Родился:</item>
        <item>Обновлялось:</item>
        <item>Объем:</item>
        <item>Рейтинг:</item>
        <item>Посетителей за год:</item>
        <item>Friends/Friend Of:</item>
        <item>Friend Of:</item>
        <item>Friends:</item>
    </string-array>
    <string-array name="work_rating">
        <item>не читал</item>
        <item>не читать</item>
        <item>очень плохо</item>
        <item>плохо</item>
        <item>посредственно</item>
        <item>терпимо</item>
        <item>нормально</item>
        <item>хорошая книга</item>
        <item>отличная книга</item>
        <item>великолепно</item>
        <item>шедевр</item>
    </string-array>
    <string name="crash_title_text">Ошибка</string>
    <string name="crash_text">\u000AПослать отчет разработчику, чтобы помочь ее исправить?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="item_rate">Оцeнки:</string>
    <string name="item_people_label">Оц. пользователей:</string>
    <string name="item_experts_label">Оц. экспертов:</string>
    <string name="item_size_label">Размер:</string>
    <string name="item_genres_label">Жанры:</string>
    <string name="item_form_label">Форма:</string>
    <string name="search_hint">Поиск…</string>
    <string name="filter_hint">Фильтр…</string>
    <string name="search">Поиск</string>
    <string name="author_about">Об авторе:</string>
    <string name="author_suggestion">Начните знакомство с:</string>
    <string name="author_annotation">Аннотация к разделу:</string>
    <string name="author_section_updates">Обновления</string>
    <string name="author_section_updates_annotation">Последние обновления в произведений автора</string>
    <string name="illustration">Иллюстрации</string>
    <string name="comments">Комментарии</string>
    <string name="author_page">Страничка автора</string>
    <string name="work_created">Размещен:</string>
    <string name="work_updated">Изменён:</string>
    <string name="work_series">Серия:</string>
    <string name="work_speaking">Синтез речи</string>
    <string name="work_speaking_language">Язык синтеза</string>
    <string name="work_to_author">К автору</string>
    <string name="work_save">Сохранить</string>
    <string name="work_save_fb2">Сохранить FB2</string>
    <string name="work_parse">Парсинг…</string>
    <string name="work_share">Поделиться</string>
    <string name="work_comments">Комментарии</string>
    <string name="work_rate">Оценить</string>
    <string name="work_open_with">Открыть в…</string>
    <string name="work_auto_scroll">Автопрокрутка</string>
    <string name="work_fullscreen">Полный экран</string>
    <string name="work_download_fb2">Загрузка FB2</string>
    <string name="footer_work_pitch">Тембр:</string>
    <string name="footer_work_speech_rate">Скорость:</string>
    <string name="newest_filter">Фильтр по категориям</string>
    <string name="dialog_filter_text">Текст:</string>
    <string name="dialog_filter_switch_mode">Исключающий фильтр</string>
    <string name="dialog_filter_find">Найти</string>
    <string name="dialog_filter_apply">Применть фильтр</string>
    <string name="dialog_filter_clear">Сбросить фильтр</string>
    <string name="dialog_filter_gender">Пол автора</string>
    <string name="dialog_filter_male">Мужской</string>
    <string name="dialog_filter_female">Женский</string>
    <string name="dialog_filter_undefined">Не опознанные</string>
    <string name="dialog_filter_any">Любая</string>
    <string name="dialog_filter_an">Любой</string>
    <string name="example_book_annotation">
        <![CDATA[
         <font color="#555555"><table><tbody><tr><td><img src="http://samlib.ru/img/r/rusaja_w/temnye_pravila/t_p.jpg" width="150"></td>  <td><p><font color="teal"><i>Легко ли жить обладательнице редкого магического дара, с которым она не умеет управляться? А если добавить к этому опеку строгого дяди-короля? И запутанные семейные тайны! А ещё потенциальное замужество, от которого хочется убежать со всех ног! Куда? Да куда угодно. Хоть в Темную Империю! Спросите, какой смысл? А светлые маги там сейчас нужны. И не важно, что играть придётся по чужим правилам. Разве трудно их поменять? </i></font></p>    <p><font color="red">Часть текста удалена. <br> Полную версию романа можно приобрести по ссылкам ниже. <br> <a href="http://feisovet.ru/%D0%BC%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD/%D0%A2%D0%B5%D0%BC%D0%BD%D1%8B%D0%B5-%D0%BF%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%D0%B0-%D0%92%D0%B5%D1%80%D0%B0-%D0%A0%D1%83%D1%81%D0%B0%D1%8F">Купить на Призрачных Мирах</a> <br><a href="http://russolit.ru/books/item/temnye-pravila.html">Купить на Руссолит</a></font></p>  <p>Огромная благодарность <a href="http://samlib.ru/b/belousowa_e_e/">Эль Бланк</a> за бесценную помощь в вычитке и корректуре! <br> Девочкам-авторам, а также моим любимым читателям спасибо за активную поддержку во время написания!</p> </td></tr></tbody></table></font>
        ]]>
    </string>
    <string name="example_comment">
        <![CDATA[
            &nbsp;&nbsp;&gt;<b> </b>&gt;<b> <b><i><font color="6060b0">963.Rufim</font></i></b></b><br>
            &nbsp;&nbsp;&gt;<b>Фу ***. ssdgmsdklndlnsdjkngksd g;sdjkng;sdjnfg;sdk fgs d jfgnsd;lfgn;dlgsd флвждфтажвтажпт дж вжапыв </b><br>
            &nbsp;&nbsp;Дапвапвыапвы апываплдваоыждлпоывждыоап вапвыпджл вапывпывапв<br>
            &nbsp;&nbsp;<br>
            &nbsp;&nbsp;
        ]]>
    </string>
    <string name="help">
        <![CDATA[
           Это тестовая верия клиента для сайта Самиздат под Андройд.<br/>
           По вопросам и возникающим багам пишите на электронную почту <a href="0rufim0@gmail.com">0rufim0@gmail.com</a><br/>
            <a href="https://htmlpreview.github.io/?https://github.com/Rufim/Samlib/blob/bugfix/privacy_policy.html"> Политика приватности.</a> Для гугла.
        ]]>
    </string>
    <string name="comments_goto">Перейти</string>
    <string name="comments_comment_number">Номер комментария:</string>
    <string name="comments_page">Страница</string>
    <string name="comments_dialog_title">Напишите комментарий</string>
    <string name="comments_add_new">Оставить комментарий</string>
    <string name="comments_new_send">Отправить</string>
    <string name="comments_choose_archive">Архивы</string>
    <string name="comments_current">Текущие комментарии</string>
    <string name="comments_new_name">Ваше имя</string>
    <string name="comments_new_email">Ваш e-mail</string>
    <string name="comments_new_link">Адрес странички</string>
    <string name="comments_new_error_name">Введите имя</string>
    <string name="comments_new_error_content">Комментарий пуст</string>
    <string name="comments_new_content">Комментарий…</string>
    <string name="comment_reply">Ответить</string>
    <string name="comment_edit">Изменить</string>
    <string name="comment_delete">Удалить</string>
    <string name="comment_restore">Восстонавить</string>
    <string name="favorites_update">Update</string>
    <string name="favorites_new">New</string>
    <string name="author_observable">Подписка</string>
    <string name="author_make_all_visited">Отметить все, как прочитанное</string>
    <string name="author_mode">Компактный вид</string>
    <string name="author_not_exist">Раздел не существует!</string>
    <string name="author_deleted">Раздел удалён.</string>
    <string name="author_parse_error">Ошибка во время парсига.</string>
    <string name="author_invalid_intent">Ошибка! Не могу прочитать url автора.</string>
    <string name="author_delete_action">Ошибка при удалении.</string>
    <string name="author_insert_action">Ошибка при удалении.</string>
    <string name="history_clean">Очистить историю</string>
    <string name="history_only_locked">Только закреплённые</string>
    <string name="history_lock">Закрепить/открепить в истории</string>
    <string name="history_lock_dialog">Закрепить/открепить выбранные?</string>
    <string name="back_to_exit">Нажмите еще раз для выхода</string>
    <string name="network_not_available">Нет интернет соединения…</string>
    <string name="external_work_delete">Удалить</string>
    <string name="external_work_cancel">Отмена</string>
    <string name="observable_add_link_or_author">Добавить по ссылке или имени</string>
    <string name="observable_add_link_or_author_exist">Автор уже добавлен</string>
    <string name="observable_add_link_or_author_added">Автор успешно добавлен</string>
    <string name="observable_add_link_or_author_error">Вы ничего не ввели</string>
    <string name="observable_add_link_or_author_error_link">Не могу найти автора по ссылке:</string>
    <string name="observable_import">Импорт из</string>
    <string name="observable_export">Экспорт в</string>
    <string name="observable_check_updates">Проверить обновления</string>
    <string name="observable_link_or_author_hint">Введите имя автора или ссылку (на-р: /k/kazancew_d)</string>
    <string name="observable_link_or_author_title">Добавить</string>
    <string name="page_not_supported">Страница не поддерживается!</string>
    <string name="work_not_in_cache">Произведение не закешированно.</string>
    <string name="work_cant_open">Не могу открыть файл. Возможно, он находится в недоступном программе месте.</string>
    <string name="work_empty">Текст не найден</string>
    <string name="stat_server_not_available">Нет соединения c сервером…</string>
    <string name="search_filter">Параметры поиска</string>
    <string name="dialog_filter_sort_views">Просмотрам</string>
    <string name="dialog_filter_sort_rating">Рейтингу</string>
    <string name="dialog_filter_sort_activity">Активности</string>
    <string name="dialog_filter_sort">Сортировка по:</string>
    <string name="dialog_filter_type">Форма:</string>
    <string name="dialog_filter_genre">Жанр:</string>
    <string name="dialog_filter_genres">Жанры:</string>
    <string name="dialog_filter_size">Минимальный размер:</string>
    <string name="tts_service">Управление синтезом речи</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_invalid">Неверный логин или пароль!</string>
    <string name="sign_in_password_empty">Введите пароль!</string>
    <string name="sign_in_login_empty">Введте логин!</string>
    <string name="sign_in_enter">Войти</string>
</resources>