<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_work_speaking"
          android:title="@string/work_speaking"
          android:checkable="true"
          android:orderInCategory="1"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_auto_scroll"
          android:title="@string/work_auto_scroll"
          android:checkable="true"
          android:orderInCategory="2"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_speaking_language"
          android:title="@string/work_speaking_language"
          android:orderInCategory="3"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_fullscreen"
          android:title="@string/work_fullscreen"
          android:orderInCategory="4"
          app:showAsAction="never"/>
    <item
        android:id="@+id/action_work_lock_bookmark"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="5"
        android:title="@string/history_lock" />
    <item android:id="@+id/action_work_to_author"
          android:title="@string/work_to_author"
          android:orderInCategory="6"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_share"
          android:title="@string/work_share"
          android:orderInCategory="7"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_open_with"
          android:title="@string/work_open_with"
          android:orderInCategory="8"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_save"
          android:title="@string/work_save"
          android:orderInCategory="9"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_save_fb2"
        android:title="@string/work_save_fb2"
        android:orderInCategory="10"
        app:showAsAction="never"/>
    <item android:id="@+id/action_work_comments"
          android:title="@string/work_comments"
          android:orderInCategory="11"
          app:showAsAction="never"/>
    <item android:id="@+id/action_work_rate"
          android:title="@string/work_rate"
          android:orderInCategory="12"
          app:showAsAction="never"/>
</menu>