<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <Switch android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_filter_switch_mode"
            android:id="@+id/dialog_filter_switch_mode"
            android:layout_gravity="center_horizontal"/>
    <TextView android:visibility="gone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_gender"
              android:padding="4dp"
              android:textSize="@dimen/text_large"
              android:layout_gravity="center_horizontal"/>
    <LinearLayout android:visibility="gone"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_male"
                android:id="@+id/dialog_filter_male"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_female"
                android:id="@+id/dialog_filter_female"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_undefined"
                android:id="@+id/dialog_filter_undefined"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_sort"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:paddingBottom="2dp"
                  android:gravity="center_horizontal">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_sort_activity"
                android:id="@+id/dialog_filter_sort_activity"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_sort_rating"
                android:id="@+id/dialog_filter_sort_rating"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_sort_views"
                android:id="@+id/dialog_filter_sort_views"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_genre"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <Spinner
            android:id="@+id/dialog_filter_genre"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:backgroundTint="?android:attr/colorControlActivated"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_type"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <Spinner
            android:id="@+id/dialog_filter_type"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:backgroundTint="?android:attr/colorControlActivated"
            android:layout_height="wrap_content"/>
</LinearLayout>