<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <Switch android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_filter_switch_mode"
            android:id="@+id/dialog_filter_switch_mode"
            android:layout_gravity="center_horizontal"/>
    <TextView android:visibility="gone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_gender"
              android:padding="4dp"
              android:textSize="@dimen/text_large"
              android:layout_gravity="center_horizontal"/>
    <LinearLayout android:visibility="gone"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_male"
                android:id="@+id/dialog_filter_male"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_female"
                android:id="@+id/dialog_filter_female"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_undefined"
                android:id="@+id/dialog_filter_undefined"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_sort"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <include layout="@layout/dialog_sesrch_sort"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_genre"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <Spinner
            android:id="@+id/dialog_filter_genre"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:backgroundTint="?android:attr/colorControlActivated"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_type"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <Spinner
            android:id="@+id/dialog_filter_type"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:backgroundTint="?android:attr/colorControlActivated"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dialog_filter_size"
              android:textSize="@dimen/text_large"
              android:padding="4dp"
              android:layout_gravity="center_horizontal"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="4dp">
        <EditText android:id="@+id/dialog_filter_size"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:maxLines="1"
                  android:digits="0123456789"
                  android:inputType="number"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginRight="16dp"
                  android:text="kb"/>
    </LinearLayout>
</LinearLayout>