<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/spacing_xlarge"
        android:gravity="center"
        android:textSize="@dimen/text_huge"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/work_created_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/work_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/work_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_updated_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/work_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/work_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_genres_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/item_genres_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"/>

        <TextView
            android:id="@+id/work_genres"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_series_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/work_series"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"/>

        <TextView
            android:id="@+id/work_series"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/illustration_button"
        android:visibility="gone"
        android:text="@string/illustration"
        style="@style/item_text"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_small"
        android:layout_margin="0dp"
        android:padding="6dp"/>
</LinearLayout>